EEVEE crashes (but CYCLES does not) when attempting to run attached file #60137

Closed
opened 2019-01-04 01:36:56 +01:00 by Sydney Weidman · 11 comments

System Information
OS: Ubuntu 16.04.5 LTS 64-bit
Graphics card: GeForce GTX 670MX/PCIe/SSE2

Blender Version
Blender 2.80 (sub 37)
build date: 2018-12-16
build time: 00:05:54
build commit date: 2018-12-15
build commit time: 22:49
build hash: 4b545d1bbf
build platform: Linux
build type: Release

Short description of error
blender dumps core when attempting to render using Eevee engine. Cycles does not crash

Exact steps for others to reproduce the error
open attached file
render it using Eevee
crashes

console output:

Read blend: /home/sweidman/Documents/blender/planet.blend
add_relation(NTree->Light Parameters) - Failed, but op_from (ComponentKey(NTShader Nodetree, SHADING)) was ok
add_relation(NTree->Light Parameters) - Could not find op_to (ComponentKey(LALight, PARAMETERS))
add_relation(NTree->Light Parameters) - Failed, but op_from (ComponentKey(NTShader Nodetree, SHADING)) was ok
add_relation(NTree->Light Parameters) - Could not find op_to (ComponentKey(LALight, PARAMETERS))
Writing: /tmp/planet.crash.txt
Segmentation fault (core dumped)

planet.crash.txt
planet.blend
2k_mars.jpg

**System Information** OS: Ubuntu 16.04.5 LTS 64-bit Graphics card: GeForce GTX 670MX/PCIe/SSE2 **Blender Version** Blender 2.80 (sub 37) build date: 2018-12-16 build time: 00:05:54 build commit date: 2018-12-15 build commit time: 22:49 build hash: 4b545d1bbf4 build platform: Linux build type: Release **Short description of error** blender dumps core when attempting to render using Eevee engine. Cycles does not crash **Exact steps for others to reproduce the error** open attached file render it using Eevee crashes console output: Read blend: /home/sweidman/Documents/blender/planet.blend add_relation(NTree->Light Parameters) - Failed, but op_from (ComponentKey(NTShader Nodetree, SHADING)) was ok add_relation(NTree->Light Parameters) - Could not find op_to (ComponentKey(LALight, PARAMETERS)) add_relation(NTree->Light Parameters) - Failed, but op_from (ComponentKey(NTShader Nodetree, SHADING)) was ok add_relation(NTree->Light Parameters) - Could not find op_to (ComponentKey(LALight, PARAMETERS)) Writing: /tmp/planet.crash.txt Segmentation fault (core dumped) [planet.crash.txt](https://archive.blender.org/developer/F6166184/planet.crash.txt) [planet.blend](https://archive.blender.org/developer/F6166190/planet.blend) ![2k_mars.jpg](https://archive.blender.org/developer/F6166198/2k_mars.jpg)
Author

Added subscriber: @sydney.weidman

Added subscriber: @sydney.weidman

#60138 was marked as duplicate of this issue

#60138 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce here (fedora29, 970m).

Not sure this could be related to missing textures:

Warning: Path '/.../T60137/assets/textures/2k_mars.jpg' not found

but just to make sure: could you please pack the file an reupload your .blend?

Marking as incomplete until we have that...

Cannot reproduce here (fedora29, 970m). Not sure this could be related to missing textures: > Warning: Path '/.../T60137/assets/textures/2k_mars.jpg' not found but just to make sure: could you please pack the file an reupload your .blend? Marking as incomplete until we have that...
Author

planet.blend

Hope that's ok.

[planet.blend](https://archive.blender.org/developer/F6171322/planet.blend) Hope that's ok.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2019-01-04 15:58:39 +01:00

I can reproduce this with the old hash, however with the latest HEAD (bfac8a429c) it is working fine.

I can reproduce this with the old hash, however with the latest HEAD (bfac8a429c7f) it is working fine.

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey no bug here, but if you want a sample file with a few missing depsgraph warnings (e.g., Could not find op_to (ComponentKey(LALight, PARAMETERS))).

@Sergey no bug here, but if you want a sample file with a few missing depsgraph warnings (e.g., `Could not find op_to (ComponentKey(LALight, PARAMETERS))`).

@dfelinto, thanks for letting me know. While it might be not related to this specific report, it was a legit bug in dependency graph.

@dfelinto, thanks for letting me know. While it might be not related to this specific report, it was a legit bug in dependency graph.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60137
No description provided.