Depsgraph: Fix missing relation from node tree to light

Was only happening when lamp had driver on the Light datablock.

Reported by Dalai Felinto in T60137.